--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
       </div>
       <div class="card">
         <div class="kvs" id="colMap"></div>
+        <div id="manualMap"></div>
         <div id="warning" class="warn"></div>
         <div id="output" class="table-wrap"></div>
       </div>
@@ -218,147 +219,217 @@
       const warning = document.getElementById('warning');
       warning.textContent = '';
       document.getElementById('colMap').innerHTML = '';
+      const manual = document.getElementById('manualMap');
+      manual.innerHTML = '';
 
-      // 헤더 탐색(여러 케이스 허용)
-      const headerIdx = data.findIndex(row => row.join(' ').includes("초/재") || row.join(' ').includes("챠트") || row.join(' ').includes("차트") || row.join(' ').includes("진료과") || row.join(' ').toLowerCase().includes('id'));
+      // 1) 헤더 탐색 (유연화): 키워드 매칭 실패 시 첫 번째 비어있지 않은 행을 헤더로 간주
+      const hasText = (v) => (v ?? '').toString().trim() !== '';
+      let headerIdx = data.findIndex(row => row.some(hasText) && (
+        row.join(' ').includes('초/재') || row.join(' ').includes('챠트') || row.join(' ').includes('차트') || row.join(' ').includes('진료과') || row.join(' ').toLowerCase().includes('id')
+      ));
       if (headerIdx === -1) {
-        warning.textContent = '❗ 유효한 헤더를 찾을 수 없습니다.';
+        headerIdx = data.findIndex(row => row.filter(hasText).length >= 2);
+      }
+      if (headerIdx === -1) {
+        warning.textContent = '❗ 유효한 헤더를 찾을 수 없습니다. (파일 첫 행들이 모두 빈 값)';
         status('헤더를 찾지 못했습니다.', true);
         return;
       }
 
-      const headers = data[headerIdx].map(h => (h||'').toString().trim());
-      const body = data.slice(headerIdx + 1).filter(r => (r?.length||0) > 1);
-      const df = body.map(row => Object.fromEntries(headers.map((h,i) => [h, (row[i] ?? '').toString().trim()])));
+      // 2) 헤더/바디 정제
+      let headers = data[headerIdx].map(h => (h ?? '').toString().replace(/^﻿/, '').trim()); // BOM 제거
+      // 빈 헤더 보정: COL_1, COL_2...
+      headers = headers.map((h, i) => h || `COL_${i+1}`);
 
-      // 컬럼 매핑(느슨한 한글/영문 키워드)
-      const col = {};
+      const body = data.slice(headerIdx + 1).filter(r => (r?.some?.(hasText)));
+      if (!body.length) {
+        warning.textContent = '❗ 데이터 행이 없습니다. 헤더 아래에 내용이 있는지 확인하세요.';
+        status('데이터 없음', true);
+        return;
+      }
+
+      const df = body.map(row => Object.fromEntries(headers.map((h,i) => [h, (row[i] ?? '').toString().trim()])));
+      status(`헤더 인식: ${headers.length}개 컬럼 · 데이터: ${df.length}행`, true);
+
+      // 3) 컬럼 매핑(느슨한 한글/영문 키워드)
+      let col = {};
       headers.forEach(h => {
         const l = h.toLowerCase();
-        if (!col['초재'] && (l.includes("초") && l.includes("재") || l.includes('new/return'))) col['초재'] = h;
-        if (!col['차트'] && (l.includes("차트") || l.includes("챠트") || l.includes("id"))) col['차트'] = h;
-        if (!col['과'] && ((l.includes("진료") && l.includes("과")) || l.includes("과목") || l.includes('dept'))) col['과'] = h;
-        if (!col['마취'] && (l.includes("마취") || l.includes('injection') || l.includes('block'))) col['마취'] = h;
-        if (!col['메모'] && (l.includes("메모") || l.includes('note') || l.includes('remark'))) col['메모'] = h;
-        if (!col['연령'] && (l.includes("나이") || l.includes("연령") || l.includes("생년") || l.includes("s/a") || l.includes('age'))) col['연령'] = h;
+        if (!col['초재'] && ((l.includes('초') && l.includes('재')) || l.includes('new/return'))) col['초재'] = h;
+        if (!col['차트'] && (l.includes('차트') || l.includes('챠트') || l.includes('id'))) col['차트'] = h;
+        if (!col['과'] && ((l.includes('진료') && l.includes('과')) || l.includes('과목') || l.includes('dept'))) col['과'] = h;
+        if (!col['마취'] && (l.includes('마취') || l.includes('injection') || l.includes('block'))) col['마취'] = h;
+        if (!col['메모'] && (l.includes('메모') || l.includes('note') || l.includes('remark'))) col['메모'] = h;
+        if (!col['연령'] && (l.includes('나이') || l.includes('연령') || l.includes('생년') || l.includes('s/a') || l.includes('age'))) col['연령'] = h;
       });
 
-      // 매핑 표시
+      // 4) 매핑 표시
       const mapEl = document.getElementById('colMap');
       const kvs = [
         ['초/재 구분','초재'], ['차트/ID','차트'], ['진료과','과'], ['마취/주사','마취'], ['메모','메모'], ['연령(선택)','연령']
       ].map(([label,key]) => `<span>${label}: <b>${col[key]||'미설정'}</b></span>`).join('');
       mapEl.innerHTML = kvs;
 
-      if (!col['초재'] || !col['차트']) {
-        warning.textContent = '❗ 필수 열(초/재, 차트/ID)을 찾지 못했습니다. 헤더명을 확인하세요.';
-        status('필수 열이 누락되었습니다.', true);
-        return;
+      // 5) 필수 누락 시 수동 매핑 UI 제공
+      const needManual = !col['초재'] || !col['차트'];
+      if (needManual) {
+        warning.innerHTML = '❗ 필수 열(초/재, 차트/ID)을 자동으로 찾지 못했습니다. 아래에서 직접 선택 후 “재계산”을 눌러주세요.';
+        const select = (id, label) => {
+          return `<label style="display:block;margin:6px 0 4px;">${label}</label>
+                  <select id="${id}" style="padding:8px;border:1px solid #e5e7eb;border-radius:8px;min-width:240px;">`
+                  + headers.map(h=>`<option value="${h}">${h}</option>`).join('')
+                  + `</select>`;
+        };
+        manual.innerHTML = `
+          <div class="card" style="margin-top:10px;">
+            ${select('m_chore','초/재 열 선택')}
+            ${select('m_chart','차트/ID 열 선택')}
+            <details style="margin-top:8px;">
+              <summary>선택(옵션) 열</summary>
+              ${select('m_dept','진료과 열 선택(선택)')}
+              ${select('m_anes','마취/주사 열 선택(선택)')}
+              ${select('m_memo','메모 열 선택(선택)')}
+              ${select('m_age','연령/나이 열 선택(선택)')}
+            </details>
+            <div style="margin-top:10px;"><button id="recalcBtn" class="primary">재계산</button></div>
+          </div>`;
+        document.getElementById('recalcBtn').onclick = () => {
+          col['초재'] = document.getElementById('m_chore').value;
+          col['차트'] = document.getElementById('m_chart').value;
+          col['과'] = document.getElementById('m_dept').value || col['과'];
+          col['마취'] = document.getElementById('m_anes').value || col['마취'];
+          col['메모'] = document.getElementById('m_memo').value || col['메모'];
+          col['연령'] = document.getElementById('m_age').value || col['연령'];
+          manual.innerHTML = '';
+          computeAndRender();
+        };
       }
 
-      const result = [];
-      const 재진조건 = ["재진", "물리치료내원", "진찰료 산정안함"]; // 필요시 수정
+      if (!needManual) computeAndRender();
 
-      const makeStat = (rows, label, ageGroup = "전체") => {
-        // 방어코드: 비어있을 때 0으로 채움
-        const 초진Rows = rows.filter(r => ["신환", "90일초진"].includes(r[col['초재']]));
-        const 초진차트 = [...new Set(초진Rows.map(r => r[col['차트']]).filter(Boolean))];
+      // 6) 계산 및 렌더 함수 (기존 로직 + 견고성 강화)
+      function computeAndRender(){
+        const result = [];
+        const 재진조건 = ["재진", "물리치료내원", "진찰료 산정안함"]; // 필요시 수정
 
-        const 재진Rows = rows.filter(r => 재진조건.includes(r[col['초재']]));
-        const 재진차트 = [...new Set(재진Rows.map(r => r[col['차트']]).filter(Boolean))];
+        const makeStat = (rows, label, ageGroup = "전체") => {
+          const 초진Rows = rows.filter(r => ["신환", "90일초진"].includes(r[col['초재']]));
+          const 초진차트 = [...new Set(초진Rows.map(r => r[col['차트']]).filter(Boolean))];
+          const 재진Rows = rows.filter(r => 재진조건.includes(r[col['초재']]));
+          const 재진차트 = [...new Set(재진Rows.map(r => r[col['차트']]).filter(Boolean))];
+          const 총 = rows.length;
 
-        const 총 = rows.length;
+          // 주사 표시는 마취 칼럼 내 ● 포함(초진 기준)
+          const 주사Rows = 초진Rows.filter(r => ((col['마취'] && (r[col['마취']]||'').includes('●'))));
+          const 주사차트 = [...new Set(주사Rows.map(r => r[col['차트']]).filter(Boolean))];
+          const 주사기록 = rows.filter(r => 주사차트.includes(r[col['차트']]));
 
-        // 주사 표시는 마취 칼럼 내 ● 포함 여부 기준(초진 대상)
-        const 주사Rows = 초진Rows.filter(r => ((r[col['마취']]||'').includes('●')));
-        const 주사차트 = [...new Set(주사Rows.map(r => r[col['차트']]).filter(Boolean))];
-        const 주사기록 = rows.filter(r => 주사차트.includes(r[col['차트']]));
+          // 환자별 횟수 집계
+          const countBy = (rows, key, cond = () => true) => rows.reduce((acc, r) => { const id = r[key]; if (!id) return acc; if (!acc[id]) acc[id] = 0; if (cond(r)) acc[id]++; return acc; }, {});
+          const 주사횟수 = countBy(주사기록, col['차트'], r => (col['마취'] && (r[col['마취']]||'').includes('●')));
+          const 내원횟수 = countBy(주사기록, col['차트'], () => true);
 
-        // 환자별 횟수 집계
-        const countBy = (rows, key, cond = () => true) => rows.reduce((acc, r) => {
-          const id = r[key]; if (!id) return acc; if (!acc[id]) acc[id] = 0; if (cond(r)) acc[id]++; return acc;
-        }, {});
+          const mean = (obj) => { const ks = Object.keys(obj); if (!ks.length) return 0; return (ks.reduce((s,k)=>s+obj[k],0)/ks.length); };
+          const 평균주사 = mean(주사횟수).toFixed(1);
+          const 평균내원 = mean(내원횟수).toFixed(1);
 
-        const 주사횟수 = countBy(주사기록, col['차트'], r => (r[col['마취']]||'').includes('●'));
-        const 내원횟수 = countBy(주사기록, col['차트'], () => true);
+          // --- 주사 횟수 분포 (요청 사양: 초진환자 기준, 1~8회이상 / 원문 라벨) ---
+          const injCountById = {};
+          rows.forEach(r => {
+            const id = r[col['차트']];
+            if (!id) return;
+            if (!초진차트.includes(id)) return; // 초진환자만 카운트
+            if (!injCountById[id]) injCountById[id] = 0;
+            if (col['마취'] && (r[col['마취']]||'').includes('●')) injCountById[id]++;
+          });
+          const injCounts = 초진차트.map(id => injCountById[id] || 0);
+          const injDen = 초진차트.length || 0;
+          const injPct = (n) => asPct(injCounts.filter(v => v === n).length, injDen);
+          const inj8Plus = asPct(injCounts.filter(v => v >= 8).length, injDen);
 
-        const mean = (obj) => { const ks = Object.keys(obj); if (!ks.length) return 0; return (ks.reduce((s,k)=>s+obj[k],0)/ks.length); };
-        $1
+          const 키워드수 = (col['메모'] && keyword)
+            ? rows.filter(r => (r[col['메모']] || '').toLowerCase().includes(keyword)).length
+            : "";
 
-        // 주사 횟수 분포(초진환자 기준, 0회 포함해 계산하되 표시는 1~8회이상)
-        // 초진 차트 목록을 母수로 삼고, 각 환자의 전체 기간 내 ●(주사) 횟수를 카운트
-        const injCountById = {};
-        rows.forEach(r => {
-          const id = r[col['차트']];
-          if (!id) return;
-          if (!초진차트.includes(id)) return; // 초진환자만 카운트
-          if (!injCountById[id]) injCountById[id] = 0;
-          if ((r[col['마취']]||'').includes('●')) injCountById[id]++;
-        });
-        const injCounts = 초진차트.map(id => injCountById[id] || 0);
-        const injDen = 초진차트.length || 0; // 母수: 모든 초진환자 수
-        const injPct = (n) => asPct(injCounts.filter(v => v === n).length, injDen);
-        const inj8Plus = asPct(injCounts.filter(v => v >= 8).length, injDen);
+          result.push({
+            "구분": label,
+            "연령대": ageGroup,
+            "초진환자수": fmtInt(초진차트.length),
+            "재진환자수(행)": fmtInt(재진Rows.length),
+            "재진환자수(차트)": fmtInt(재진차트.length),
+            "총행수": fmtInt(총),
+            "초진 주사 처방률": asPct(주사Rows.length, 초진차트.length || 0),
+            "초진주사 갯수": fmtInt(주사Rows.length),
+            "초진 주사환자 재진율": asPct(Object.values(내원횟수).filter(v => v >= 2).length, Object.keys(내원횟수).length || 0),
+            "초진주사환자 평균 주사횟수": 평균주사,
+            "1회": injPct(1),
+            "2회": injPct(2),
+            "3회": injPct(3),
+            "4회": injPct(4),
+            "5회": injPct(5),
+            "6회": injPct(6),
+            "7회": injPct(7),
+            "8회이상": inj8Plus,
+            "초진 주사환자 평균내원횟수": 평균내원,
+            "초진평균내원횟수": 평균초진내원(rows, col, 초진차트).toFixed(1),
+            "초진 재내원율": 재내원율(rows, col, 초진차트),
+            "1회 내원 비율": 내원분포(rows, col, 초진차트, 1),
+            "2회 내원 비율": 내원분포(rows, col, 초진차트, 2),
+            "3회 내원 비율": 내원분포(rows, col, 초진차트, 3),
+            "4회 내원 비율": 내원분포(rows, col, 초진차트, 4),
+            "5회 이상 내원 비율": 내원5이상(rows, col, 초진차트),
+            "특정 키워드 포함 메모 수": 키워드수
+          });
+        };
 
-        // 초진 환자들의 전체 기간 내 내원 횟수
-        const 초진기록 = rows.filter(r => 초진차트.includes(r[col['차트']]));
-        const 초진내원 = countBy(초진기록, col['차트'], () => true);
-        const 평균초진내원 = mean(초진내원).toFixed(1);
-        const 재내원명수 = Object.values(초진내원).filter(v => v >= 2).length;
-
-        const 내원비율 = (n) => asPct(Object.values(초진내원).filter(v => v === n).length, Object.keys(초진내원).length);
-        const 내원5이상 = asPct(Object.values(초진내원).filter(v => v >= 5).length, Object.keys(초진내원).length);
-
-        const 키워드수 = (col['메모'] && keyword)
-          ? rows.filter(r => (r[col['메모']] || '').toLowerCase().includes(keyword)).length
-          : "";
-
-        $1
-          "1회": injPct(1),
-          "2회": injPct(2),
-          "3회": injPct(3),
-          "4회": injPct(4),
-          "5회": injPct(5),
-          "6회": injPct(6),
-          "7회": injPct(7),
-          "8회이상": inj8Plus,
-          "초진 주사환자 평균내원횟수": 평균내원,
-          "초진평균내원횟수": 평균초진내원,
-          "초진 재내원율": asPct(재내원명수, 초진차트.length || 0),
-          "1회 내원 비율": 내원비율(1),
-          "2회 내원 비율": 내원비율(2),
-          "3회 내원 비율": 내원비율(3),
-          "4회 내원 비율": 내원비율(4),
-          "5회 이상 내원 비율": 내원5이상,
-          "특정 키워드 포함 메모 수": 키워드수
-        });
-      };
-
-      const 연령열존재 = !!col['연령'];
-      const 전체 = df;
-
-      // 전체
-      if (연령열존재) {
-        AGE_ORDER.slice(0, -1).forEach(a => makeStat(전체.filter(r => getAgeGroup(r[col['연령']]) === a), "전체", a));
-      }
-      makeStat(전체, "전체", "전체");
-
-      // 진료과 별
-      const 진료과들 = [...new Set(df.map(r => r[col['과']] || "기타"))];
-      진료과들.forEach(과 => {
-        const rows = df.filter(r => (r[col['과']] || "기타") === 과);
-        if (연령열존재) {
-          AGE_ORDER.slice(0, -1).forEach(a => makeStat(rows.filter(r => getAgeGroup(r[col['연령']]) === a), 과, a));
+        // 보조 계산 유틸(기존 로직 분리)
+        function 초진평균내원횟수(rows, col, 초진차트){
+          const 초진기록 = rows.filter(r => 초진차트.includes(r[col['차트']]));
+          const 내원횟수 = 초진기록.reduce((acc,r)=>{const id=r[col['차트']]; if(!id) return acc; acc[id]=(acc[id]||0)+1; return acc;},{});
+          const ks = Object.keys(내원횟수); if(!ks.length) return 0;
+          return ks.reduce((s,k)=>s+내원횟수[k],0)/ks.length;
         }
-        makeStat(rows, 과, "전체");
-      });
+        function 재내원율(rows, col, 초진차트){
+          const 초진기록 = rows.filter(r => 초진차트.includes(r[col['차트']]));
+          const 내원횟수 = 초진기록.reduce((acc,r)=>{const id=r[col['차트']]; if(!id) return acc; acc[id]=(acc[id]||0)+1; return acc;},{});
+          const 재내원명수 = Object.values(내원횟수).filter(v => v >= 2).length;
+          return asPct(재내원명수, 초진차트.length || 0);
+        }
+        function 내원분포(rows, col, 초진차트, n){
+          const 초진기록 = rows.filter(r => 초진차트.includes(r[col['차트']]));
+          const 내원횟수 = 초진기록.reduce((acc,r)=>{const id=r[col['차트']]; if(!id) return acc; acc[id]=(acc[id]||0)+1; return acc;},{});
+          const cnt = Object.values(내원횟수).filter(v => v === n).length;
+          return asPct(cnt, Object.keys(내원횟수).length || 0);
+        }
+        function 내원5이상(rows, col, 초진차트){
+          const 초진기록 = rows.filter(r => 초진차트.includes(r[col['차트']]));
+          const 내원횟수 = 초진기록.reduce((acc,r)=>{const id=r[col['차트']]; if(!id) return acc; acc[id]=(acc[id]||0)+1; return acc;},{});
+          const cnt = Object.values(내원횟수).filter(v => v >= 5).length;
+          return asPct(cnt, Object.keys(내원횟수).length || 0);
+        }
 
-      renderTable(result);
-      status(`완료: ${fmtInt(df.length)}개 행 처리`, true);
+        // 전체
+        const 연령열존재 = !!col['연령'];
+        const 전체 = df;
+        if (연령열존재) {
+          AGE_ORDER.slice(0, -1).forEach(a => makeStat(전체.filter(r => getAgeGroup(r[col['연령']]) === a), "전체", a));
+        }
+        makeStat(전체, "전체", "전체");
 
-      // 엑셀 내보내기 버튼 활성화
-      const exportBtn = document.getElementById('exportBtn');
-      exportBtn.onclick = () => exportResult(result);
+        // 진료과 별
+        const 진료과들 = [...new Set(df.map(r => r[col['과']] || "기타"))];
+        진료과들.forEach(과 => {
+          const rows = df.filter(r => (r[col['과']] || "기타") === 과);
+          if (연령열존재) {
+            AGE_ORDER.slice(0, -1).forEach(a => makeStat(rows.filter(r => getAgeGroup(r[col['연령']]) === a), 과, a));
+          }
+          makeStat(rows, 과, "전체");
+        });
+
+        renderTable(result);
+        status(`완료: ${fmtInt(df.length)}개 행 처리`, true);
+        document.getElementById('exportBtn').disabled = false;
+      }
     }
 
     // ====== 엑셀 내보내기 ======
