--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
             "7회": injPct(7),
             "8회이상": inj8Plus,
             "초진 주사환자 평균내원횟수": 평균내원,
-            "초진평균내원횟수": 평균초진내원(rows, col, 초진차트).toFixed(1),
+            "초진평균내원횟수": 초진평균내원횟수(rows, col, 초진차트).toFixed(1),
             "초진 재내원율": 재내원율(rows, col, 초진차트),
             "1회 내원 비율": 내원분포(rows, col, 초진차트, 1),
             "2회 내원 비율": 내원분포(rows, col, 초진차트, 2),
